# console

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  build.sh  deploy.sh  deploy.yaml
src/: main.rs
src/client/: mkube.rs  mod.rs  stormd.rs
src/ui/: bmh.rs  bootconfigs.rs  dashboard.rs  deployments.rs  jobs.rs  layout.rs  logs.rs  mod.rs  networks.rs  nodes.rs  pods.rs  registries.rs  storage.rs  style.rs  terminal.rs
